--- a/index.html
+++ b/index.html
@@ -4,21 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Saurabh Personal WebSite</title>
-
-  <style>
-    body {
-      background-color: #dbc6eb;
-    }
-
-    hr{
-      background-color: black;
-      border-style: none;
-      border-top-style: dotted;
-      color:white;
-      width: 70%;
-    }
-  </style>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
