--- a/hobbies.html
+++ b/hobbies.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <h1>My Hobbies</h1>
-  <hr style="height:5px;border-width:0;color:gray;background-color:gray">
+  <hr>
   <ol>
     <li><a href="https://www.youtube.com/watch?v=yi5wGSiieYg">Bike Rides</a></li>
     <li><a href="https://www.youtube.com/watch?v=ZuyaE8HJLno">Cricket</a></li>
