--- a/contact-me.html
+++ b/contact-me.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <h1>My Contact Details</h1>
-  <hr style="height:5px;border-width:0;color:gray;background-color:gray">
+  <hr>
   <h3>My address</h3>
   <p>E-206 Hari Om Society,Pandav Nagari,Indira Nagar,Nashik</p>
   <h3>My Phone No.</h3>
